containers-data-exchange.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exchange
  namespace: hw-kube-stor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-exchange
  template:
    metadata:
      labels:
        app: data-exchange
    spec:
      containers:
        - name: busybox
          image: busybox:1.36
          command: ["/bin/sh", "-c"]
          args:
            - >
              while true; do
                date >> /shared/data.txt;
                sleep 5;
              done
          volumeMounts:
            - name: shared-volume
              mountPath: /shared
        - name: multitool
          image: wbitt/network-multitool:latest
          command: ["/bin/sh", "-c"]
          args:
            - >
              tail -f /shared/data.txt
          volumeMounts:
            - name: shared-volume
              mountPath: /shared
      volumes:
        - name: shared-volume
          emptyDir: {}
