data-exchange-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exchange-pvc
  namespace: hw-kube-stor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-exchange-pvc
  template:
    metadata:
      labels:
        app: data-exchange-pvc
    spec:
      containers:
        - name: busybox
          image: busybox:1.36
          command: ["/bin/sh", "-c"]
          args:
            - >
              while true; do
                date >> /data/storage/data.txt;
                sleep 5;
              done
          volumeMounts:
            - name: pvc-volume
              mountPath: /data/storage
        - name: multitool
          image: wbitt/network-multitool:latest
          command: ["/bin/sh", "-c"]
          args:
            - >
              tail -f /data/storage/data.txt
          volumeMounts:
            - name: pvc-volume
              mountPath: /data/storage
      volumes:
        - name: pvc-volume
          persistentVolumeClaim:
            claimName: pvc-local-manual
