deployment-multi-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-container-app
  namespace: hw-kube-net
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multi-container-app
  template:
    metadata:
      labels:
        app: multi-container-app
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080
