multitool-check.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multitool-check
  namespace: hw-k8s
spec:
  containers:
    - name: multitool
      image: wbitt/network-multitool
