nginx-init-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-init-deployment
  namespace: hw-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-init
  template:
    metadata:
      labels:
        app: nginx-init
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
