app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: hw-k8s
spec:
  selector:
    app: app-demo
  ports:
    - name: nginx
      port: 9001
      targetPort: 80
    - name: multitool
      port: 9002
      targetPort: 1180
  type: ClusterIP
