nginx-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-2
  namespace: hw-k8s
spec:
  selector:
    app: nginx-init
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
