service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-container-service
  namespace: hw-kube-net
spec:
  type: ClusterIP
  selector:
    app: multi-container-app
  ports:
    - name: nginx
      protocol: TCP
      port: 9001
      targetPort: 80
    - name: multitool
      protocol: TCP
      port: 9002
      targetPort: 8080
