service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: hw-kube-net
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
