service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-service
  namespace: hw-kube-net
spec:
  type: NodePort
  selector:
    app: multi-container-app
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
