service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-svc
  namespace: hw-kube-conf
spec:
  selector:
    app: web-app
  ports:
    - name: http
      port: 80
      targetPort: 80
